LIST OF CHANGES FOR NPG-QC PACKAGE

release 72.1.2 (2024-08-05)
 - handle cases where the same tag sequence is seen in both index reads

release 72.1.1 (2024-05-24)
 - Removing Tidyp dependency from CI

release 72.1.0
 - Fixed the bug that was introduced while updating the SeqQC summary display
   for pulldown_metrics incomplete results. The bug manifestation is a display
   appearence of an unexpected raw mean depth value just before the coverage
   value. All values that should be displayed were unaffected by the bug.
 - Removed an unused part of the bin/call_gtck_composite_rpt.pl script.
   This part contained the code that failed the compilation following the
   deletion of the short_info role in wtsi-npg/npg_tracking#812

release 72.0.1
 - Ensured that retrieving values from a partially defined pulldown_metrics
   result does not trigger an error. Added a test to demonstrate that such
   result can be loaded to the database without problems.
 - Updated the SeqQC summary display for pulldown_metrics incomplete results
   so that just 'n/a' is displayed.
 - autoqc rna seqqc max memory hardcoded limit increased to 8000MB

release 72.0.0

 - QC View sorting order to put merged lanes before unmerged.
 - Simplify schema exclusions now the tables are gone
 - Fix QC change doc to use transaction as intended
 - Update tag sniff pod and deps
 - Force one-page API response for tag sets
 - Update README

release 71.1.0
 - Updated DBIC ORM following the production MySQL database server upgrade
   to MySQL v8.+
 - Fixed a problem with archival of incomplete genotyping autoqc results
 - Removed unused CI scripts
 - Removed listing of non-existing files fro MANIFEST
 - Fixed a warning when running the t/60-autoqc-results-result.t test

release 71.0.1
 - Change to Perl versions from Perlbrew for CI

release 71.0.0
 - Removed the plugin that enable to run the SeqQC server under the
   daemon utility. 
 - Updated SOP for changing QC outcomes

release 70.3.0