@@ -1,5 +1,9 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - To enable access to information about a sequencing run (from RunInfo.xml,
+   {r,R}unParameters.xml), added an optional 'runfolder_path' attribute to
+   the review check. The attribute will have to be set by the caller.
+
 release 72.1.2 (2024-08-05)
  - handle cases where the same tag sequence is seen in both index reads
 
